deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: teamcity-server
  name: teamcity-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-server
  template:
    metadata:
      labels:
        app: teamcity-server
    spec:
      volumes:
      - name: teamcity-server
        persistentVolumeClaim:
          claimName: teamcity-server-pvc
      containers:
      - image: registry.allthingsops.io/allthingsops/ato-teamcity
        name: teamcity-server
        resources:
          requests:
            memory: 1Gi
            cpu: 500m
          limits:
            memory: 2Gi
            cpu: 1000m
        ports:
        - containerPort: 8111
          protocol: TCP
