ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: teamcity-server
  name: teamcity-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tc.allthingsops.cloud
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: teamcity-server-svc
              port:
                number: 8111
